Added more platforms to appveyor.yml and removed the coveralls.io coverage generation/button since codecov.io has the same information but better to inspect

--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,6 @@ git:
 #  - julia -e 'Pkg.clone(pwd()); Pkg.build("Modia3D"); Pkg.test("Modia3D"; coverage=true)'
 after_success:
   # push coverage results to Coveralls
-  - julia -e 'cd(Pkg.dir("Modia3D")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
+  # - julia -e 'cd(Pkg.dir("Modia3D")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
   - julia -e 'cd(Pkg.dir("Modia3D")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
