--- a/.travis.yml
+++ b/.travis.yml
@@ -35,4 +35,4 @@ after_success:
   # push coverage results to Coveralls
   # - julia -e 'cd(Pkg.dir("Modia3D")); Pkg.add("Coverage"); using Coverage; Coveralls.submit(Coveralls.process_folder())'
   # push coverage results to Codecov
-  #- julia -e 'cd(Pkg.dir("Modia3D")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+  - julia -e 'using Pkg; cd(Pkg.dir("Modia3D")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
