--- a/Project.toml
+++ b/Project.toml
@@ -20,11 +20,11 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 Colors = "0.12, 0.11, 0.10"
-DataFrames = "0.22, 0.21, 0.20, 0.19"
+DataFrames = "1, 0.22, 0.21, 0.20, 0.19"
 JSON = "0.21"
 ModiaLang = "0.8.1"
-OrderedCollections = "1.4, 1.3, 1.2, 1.1"
-StaticArrays = "1.2, 1.1, 1.0"
+OrderedCollections = "1"
+StaticArrays = "1"
 TimerOutputs = "0.5"
-Unitful = "1.9, 1.8, 1.7, 1.6, 1.5, 1.4, 1.3, 1.2, 1.1, 1.0"
-julia = "1.7, 1.6, 1.5"
+Unitful = "1"
+julia = "1.5"
