--- a/Project.toml
+++ b/Project.toml
@@ -6,6 +6,7 @@ version = "0.5.1-dev"
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
+DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -21,6 +22,7 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 [compat]
 Colors = "0.12, 0.11, 0.10"
 DataFrames = "0.22, 0.21, 0.20, 0.19"
+DoubleFloats = "1.1"
 JSON = "0.21"
 ModiaLang = "0.8.1"
 OrderedCollections = "1.4, 1.3, 1.2, 1.1"
