--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Modia3D"
 uuid = "07f2c1e0-90b0-56cf-bda7-b44b56e34eed"
 authors = ["Andrea Neumayr <andrea.neumayr@dlr.de>", "Martin Otter <Martin.Otter@dlr.de>", "Gerhard Hippmann <gerhard.hippmann@dlr.de>"]
-version = "0.5.1-dev"
+version = "0.6.0-dev"
 
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
@@ -10,6 +10,7 @@ DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+ModiaBase = "ec7bf1ca-419d-4510-bbab-199861c55244"
 ModiaLang = "34b37210-eaa3-4b48-8781-0b87bf559981"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -21,12 +22,13 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 Colors = "0.12, 0.11, 0.10"
-DataFrames = "0.22, 0.21, 0.20, 0.19"
+DataFrames = "1, 0.22, 0.21, 0.20, 0.19"
 DoubleFloats = "1.1"
 JSON = "0.21"
-ModiaLang = "0.8.1"
-OrderedCollections = "1.4, 1.3, 1.2, 1.1"
-StaticArrays = "1.2, 1.1, 1.0"
+ModiaBase = "0.8.0"
+ModiaLang = "0.9.0"
+OrderedCollections = "1"
+StaticArrays = "1"
 TimerOutputs = "0.5"
-Unitful = "1.9, 1.8, 1.7, 1.6, 1.5, 1.4, 1.3, 1.2, 1.1, 1.0"
+Unitful = "1"
 julia = "1.7, 1.6, 1.5"
