--- a/Project.toml
+++ b/Project.toml
@@ -10,6 +10,7 @@ DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 ModiaLang = "34b37210-eaa3-4b48-8781-0b87bf559981"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -24,6 +25,7 @@ Colors = "0.12, 0.11, 0.10"
 DataFrames = "1, 0.22, 0.21, 0.20, 0.19"
 DoubleFloats = "1.1"
 JSON = "0.21"
+Measurements = "2"
 ModiaLang = "0.8.3"
 OrderedCollections = "1"
 StaticArrays = "1"
