use MonteCarloMeasurements.jl pkg

--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 ModiaLang = "34b37210-eaa3-4b48-8781-0b87bf559981"
+MonteCarloMeasurements = "0987c9cc-fe09-11e8-30f0-b96dd679fdca"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
@@ -27,6 +28,7 @@ DoubleFloats = "1.1"
 JSON = "0.21"
 Measurements = "2"
 ModiaLang = "0.8.3"
+MonteCarloMeasurements = "1, 0.10"
 OrderedCollections = "1"
 StaticArrays = "1"
 TimerOutputs = "0.5"
