--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 ModiaLang = "34b37210-eaa3-4b48-8781-0b87bf559981"
 MonteCarloMeasurements = "0987c9cc-fe09-11e8-30f0-b96dd679fdca"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
@@ -30,6 +31,7 @@ Measurements = "2"
 ModiaLang = "0.8.3"
 MonteCarloMeasurements = "1, 0.10"
 OrderedCollections = "1"
+Reexport = "1.0, 0.2"
 StaticArrays = "1"
 TimerOutputs = "0.5"
 Unitful = "1"
