--- a/Project.toml
+++ b/Project.toml
@@ -7,10 +7,12 @@ version = "0.5.2"
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
+MeshIO = "7269a6da-0436-5bbc-96c2-40638cbb6118"
 ModiaLang = "34b37210-eaa3-4b48-8781-0b87bf559981"
 MonteCarloMeasurements = "0987c9cc-fe09-11e8-30f0-b96dd679fdca"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
