--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Modia3D"
 uuid = "07f2c1e0-90b0-56cf-bda7-b44b56e34eed"
 authors = ["Andrea Neumayr <andrea.neumayr@dlr.de>", "Martin Otter <Martin.Otter@dlr.de>", "Gerhard Hippmann <gerhard.hippmann@dlr.de>"]
-version = "0.7.1-dev"
+version = "0.8.0"
 
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
@@ -26,16 +26,16 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 Colors = "0.12, 0.11, 0.10"
-DataFrames = "1, 0.22, 0.21, 0.20, 0.19"
+DataFrames = "1"
 DoubleFloats = "1.1"
 FileIO = "1"
 JSON = "0.21"
 Measurements = "2"
 MeshIO = "0.4.10"
-ModiaLang = "0.9.1"
-MonteCarloMeasurements = "1, 0.10"
+ModiaLang = "0.10.0"
+MonteCarloMeasurements = "1"
 OrderedCollections = "1"
-Reexport = "1.0, 0.2"
+Reexport = "1.0"
 StaticArrays = "1"
 TimerOutputs = "0.5"
 Unitful = "1"
