--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Modia3D"
 uuid = "07f2c1e0-90b0-56cf-bda7-b44b56e34eed"
 authors = ["Andrea Neumayr <andrea.neumayr@dlr.de>", "Martin Otter <Martin.Otter@dlr.de>", "Gerhard Hippmann <gerhard.hippmann@dlr.de>"]
-version = "0.8.0"
+version = "0.9.0-dev"
 
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
@@ -32,7 +32,7 @@ FileIO = "1"
 JSON = "0.21"
 Measurements = "2"
 MeshIO = "0.4.10"
-ModiaLang = "0.10.0"
+ModiaLang = "0.11, 0.10"
 MonteCarloMeasurements = "1"
 OrderedCollections = "1"
 Reexport = "1.0"
