--- a/Project.toml
+++ b/Project.toml
@@ -1,19 +1,23 @@
 name = "Modia3D"
 uuid = "07f2c1e0-90b0-56cf-bda7-b44b56e34eed"
 authors = ["Andrea Neumayr <andrea.neumayr@dlr.de>", "Martin Otter <Martin.Otter@dlr.de>", "Gerhard Hippmann <gerhard.hippmann@dlr.de>"]
-version = "0.6.0-dev"
+version = "0.9.0-dev"
 
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
+FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-ModiaBase = "ec7bf1ca-419d-4510-bbab-199861c55244"
+Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
+MeshIO = "7269a6da-0436-5bbc-96c2-40638cbb6118"
 ModiaLang = "34b37210-eaa3-4b48-8781-0b87bf559981"
+MonteCarloMeasurements = "0987c9cc-fe09-11e8-30f0-b96dd679fdca"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
+Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
@@ -22,13 +26,17 @@ Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
 [compat]
 Colors = "0.12, 0.11, 0.10"
-DataFrames = "1, 0.22, 0.21, 0.20, 0.19"
+DataFrames = "1"
 DoubleFloats = "1.1"
+FileIO = "1"
 JSON = "0.21"
-ModiaBase = "0.8.0"
-ModiaLang = "0.9.0"
+Measurements = "2"
+MeshIO = "0.4.10"
+ModiaLang = "0.11, 0.10"
+MonteCarloMeasurements = "1"
 OrderedCollections = "1"
+Reexport = "1.0"
 StaticArrays = "1"
 TimerOutputs = "0.5"
 Unitful = "1"
-julia = "1.7, 1.6, 1.5"
+julia = "1.7"
