- Support FreeMotion joints with new code generation scheme - Change "method" keyword in buildModia3D(model; method = XX) from Int value to Symbolic value   (default: :ComputeJointForces) - Fix some issues with excessive memory allocation - Adapt requiredFinalStates of ShaftFreeMotion.jl, because order of states has changed.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,10 @@ env:
   JULIA_NUM_THREADS: 4
   
 on:
-  - push
+  pull_request:
+    branches:
+      - main
+
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
