Adapted to Modia 0.8 (= nonbackwards compatible change).

--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "Modia3D"
 uuid = "07f2c1e0-90b0-56cf-bda7-b44b56e34eed"
 authors = ["Andrea Neumayr <andrea.neumayr@dlr.de>", "Martin Otter <Martin.Otter@dlr.de>", "Gerhard Hippmann <gerhard.hippmann@dlr.de>"]
-version = "0.9.1"
+version = "0.10.0"
 
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
@@ -13,7 +13,7 @@ Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Measurements = "eff96d63-e80a-5855-80a2-b1b0885c5ab7"
 MeshIO = "7269a6da-0436-5bbc-96c2-40638cbb6118"
-ModiaLang = "34b37210-eaa3-4b48-8781-0b87bf559981"
+Modia = "cb905087-75eb-5f27-8515-1ce0ec8e839e"
 MonteCarloMeasurements = "0987c9cc-fe09-11e8-30f0-b96dd679fdca"
 OrderedCollections = "bac558e1-5e72-5ebc-8fee-abe8a469f55d"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
@@ -32,7 +32,7 @@ FileIO = "1"
 JSON = "0.21"
 Measurements = "2"
 MeshIO = "0.4.10"
-ModiaLang = "0.11.3"
+Modia = "0.8.1"
 MonteCarloMeasurements = "1"
 OrderedCollections = "1"
 Reexport = "1.0"
