--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,24 @@
+authors = ["Andrea Neumayr <andrea.neumayr@dlr.de>", "Martin Otter <Martin.Otter@dlr.de>", "Gerhard Hippmann <gerhard.hippmann@dlr.de>"]
 name = "Modia3D"
 uuid = "07f2c1e0-90b0-56cf-bda7-b44b56e34eed"
-authors = ["Andrea Neumayr <andrea.neumayr@dlr.de>", "Martin Otter <Martin.Otter@dlr.de>", "Gerhard Hippmann <gerhard.hippmann@dlr.de>"]
 version = "0.10.1"
+
+[compat]
+Colors = "0.12, 0.11, 0.10"
+DataFrames = "1"
+DoubleFloats = "1.1"
+FileIO = "1"
+JSON = "0.21"
+Measurements = "2"
+MeshIO = "0.4.10"
+Modia = "0.8.2"
+MonteCarloMeasurements = "1"
+OrderedCollections = "1"
+Reexport = "1.0"
+StaticArrays = "1"
+TimerOutputs = "0.5"
+Unitful = "1"
+julia = "1.7"
 
 [deps]
 Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
@@ -24,19 +41,5 @@ TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
 UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
 
-[compat]
-Colors = "0.12, 0.11, 0.10"
-DataFrames = "1"
-DoubleFloats = "1.1"
-FileIO = "1"
-JSON = "0.21"
-Measurements = "2"
-MeshIO = "0.4.10"
-Modia = "0.8.1"
-MonteCarloMeasurements = "1"
-OrderedCollections = "1"
-Reexport = "1.0"
-StaticArrays = "1"
-TimerOutputs = "0.5"
-Unitful = "1"
-julia = "1.7"
+[extras]
+CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
