--- a/Project.toml
+++ b/Project.toml
@@ -1,23 +1,25 @@
 authors = ["Andrea Neumayr <andrea.neumayr@dlr.de>", "Martin Otter <Martin.Otter@dlr.de>", "Gerhard Hippmann <gerhard.hippmann@dlr.de>"]
 name = "Modia3D"
 uuid = "07f2c1e0-90b0-56cf-bda7-b44b56e34eed"
-version = "0.10.3-dev"
+version = "0.10.3"
 
 [compat]
 Colors = "0.12, 0.11, 0.10"
 DataFrames = "1"
 DoubleFloats = "1.1"
 FileIO = "1"
+HTTP = "0.9"
 JSON = "0.21"
 Measurements = "2"
 MeshIO = "0.4.10"
-Modia = "0.8.2"
+Modia = "0.8.3"
 MonteCarloMeasurements = "1"
 OrderedCollections = "1"
 Reexport = "1.0"
 StaticArrays = "1"
 TimerOutputs = "0.5"
 Unitful = "1"
+URIParser = "0.4"
 julia = "1.7"
 
 [deps]
@@ -25,6 +27,7 @@ Colors = "5ae59095-9a9b-59fe-a467-6f913c188581"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DoubleFloats = "497a8b3b-efae-58df-a0af-a86822472b78"
 FileIO = "5789e2e9-d7fb-5bc7-8068-2c6fae9b9549"
+HTTP = "cd3eb016-35fb-5094-929b-558a96fad6f3"
 JSON = "682c06a0-de6a-54ab-a142-c8b1cf79cde6"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
@@ -38,8 +41,9 @@ Reexport = "189a3867-3050-52da-a836-e630ba90ab69"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
 TimerOutputs = "a759f4b9-e2f1-59dc-863e-4aeb61b1ea8f"
-UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 Unitful = "1986cc42-f94f-5a68-af5c-568840ba703d"
+URIParser = "30578b45-9adc-5946-b283-645ec420af67"
+UUIDs = "cf7118a7-6976-5b1a-9a39-7adc72f591a4"
 
 [extras]
 CPUSummary = "2a0fbf3d-bb9c-48f3-b0a9-814d99fd7ab9"
