--- a/Project.toml
+++ b/Project.toml
@@ -12,7 +12,7 @@ HTTP = "0.9"
 JSON = "0.21"
 Measurements = "2"
 MeshIO = "0.4.10"
-Modia = "0.11.0"
+Modia = "0.12.0, 0.11.0"
 MonteCarloMeasurements = "1"
 OrderedCollections = "1"
 Reexport = "1.0"
