Update Modia compatibility 0.12.0 -> 0.12.1

--- a/Project.toml
+++ b/Project.toml
@@ -11,8 +11,8 @@ FileIO = "1"
 HTTP = "0.9"
 JSON = "0.21"
 Measurements = "2"
-MeshIO = "0.4.10"
-Modia = "0.12.0"
+MeshIO = ">= 0.4.10"
+Modia = "0.12.1"
 MonteCarloMeasurements = "1"
 OrderedCollections = "1"
 Reexport = "1.0"
