Enable kinematic chain flipping
- Enable kinematic chain flipping for structure variable systems; implemented by Andrea.Neumayr@dlr.de.
- Add mesh files DLRLogo.obj/json.
- Improve version compat of HTTP and MeshIO.
- Move model Robot/ScenarioCollisionOnly.jl from normal to complete tests.
- Update julia version 1.9.0 -> 1.9.4 in test workflow.

--- a/Project.toml
+++ b/Project.toml
@@ -8,10 +8,10 @@ Colors = "0.12, 0.11, 0.10"
 DataFrames = "1"
 DoubleFloats = "1"
 FileIO = "1"
-HTTP = "1.10"
+HTTP = "1"
 JSON = "0.21"
 Measurements = "2"
-MeshIO = "0.4.10"
+MeshIO = ">= 0.4.10"
 Modia = "0.12.1"
 MonteCarloMeasurements = "1"
 OrderedCollections = "1"
