--- a/Project.toml
+++ b/Project.toml
@@ -11,7 +11,7 @@ FileIO = "1"
 HTTP = "1"
 JSON = "0.21"
 Measurements = "2"
-MeshIO = ">= 0.4.10"
+MeshIO = "0.4.10"
 Modia = "0.12.1"
 MonteCarloMeasurements = "1"
 OrderedCollections = "1"
